--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: python
 python:
   - 3.3
 
-install:
-  - pip install coveralls
+#install:
+#  - pip install coveralls
 
 script:
   - coverage run --source=testCi setup.py test
 
-after_success:
-  - coveralls
+#after_success:
+#  - coveralls
